k8s/monitor.yaml
# This is an example where https://monitor.$domain is hosted outside
#  kubernetes, on pair of vhosts serving a monitoring dashboard at
#  $PORT_NAGIOSQL and nagios at port 80.
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: $SERVICE_NAME
  name: $SERVICE_NAME
spec:
  ports:
  - name: nagios
    port: 18980
  - name: nagiosql
    port: 19780
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: $SERVICE_NAME
subsets:
- addresses:
  - ip: 192.168.2.43
  ports:
  - name: nagios
    port: 18980
  - name: nagiosql
    port: 19780
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $SERVICE_NAME-ingress
  annotations:
    # TODO - letsencrypt (can't deal with these redirects and basic-auth)
    #  Doesn't validate when using type ExternalName
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/upstream-vhost: monitor.ci.net
spec:
  ingressClassName: nginx
  tls:
  - secretName: $SERVICE_NAME.$DOMAIN
    hosts:
    - $SERVICE_NAME.$DOMAIN
  rules:
  - host: $SERVICE_NAME.$DOMAIN
    http:
      paths:
      - path: /nagios/
        backend:
          service:
            name: $SERVICE_NAME
            port:
              number: 18980
        pathType: Prefix
      - path: /
        backend:
          service:
            name: $SERVICE_NAME
            port:
              number: $PORT_NAGIOSQL
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $SERVICE_NAME-totp
  annotations:
    nginx.ingress.kubernetes.io/auth-url: http://$AUTHELIA_IP/api/verify
    nginx.ingress.kubernetes.io/auth-signin: https://authtotp.$DOMAIN
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/upstream-vhost: monitor.ci.net
spec:
  ingressClassName: nginx
  tls:
  - secretName: $SERVICE_NAME.$DOMAIN
    hosts:
    - $SERVICE_NAME.$DOMAIN
  rules:
  - host: $SERVICE_NAME.$DOMAIN
    http:
      paths:
      - path: /NagiosQL/index.php
        backend:
          service:
            name: $SERVICE_NAME
            port:
              number: $PORT_NAGIOSQL
        pathType: Prefix
      # - path: /nagios
      #   backend:
      #     service:
      #       name: $SERVICE_NAME
      #       port:
      #         number: 443
      #   pathType: Prefix
